Improved various loaders